Adding setup steps.